# zellij-habitat-orchestrator-plugin

./: .gitignore  CLAUDE.local.md  CLAUDE.md  Cargo.toml  NOTES.md  PLAN.md  README.md  TESTING.md  build.sh  deny.toml
ai_docs/: P0_P1_AUDIT_2026-04-22.md
crates/dcg-admit/: Cargo.toml
crates/dcg-admit/src/: admit.rs  arming.rs  cli.rs  error.rs  exec.rs  fence.rs  governor.rs  lib.rs  main.rs  saga.rs  warrant.rs  width.rs
crates/habitat-bridge-client/: Cargo.toml
crates/habitat-bridge-client/src/: lib.rs
crates/habitat-core/: Cargo.toml
crates/habitat-core/src/: config.rs  events.rs  lib.rs  module.rs  render.rs  responses.rs
crates/habitat-core/tests/fixtures/: bus_events_mixed.json  orac_health_active.json  orac_health_nominal.json  proposals_single.json  pv2_field_idle.json  pv2_field_nominal.json
crates/habitat-modules/: Cargo.toml
crates/habitat-modules/src/: bridge_health.rs  campaign_attention.rs  cmd_pipe.rs  coherence_gauge.rs  event_feed.rs  fiber_cockpit.rs  fleet_view.rs  lib.rs  na_panel.rs  orchestrator_kernel.rs  orchestrator_witness.rs  session_timer.rs  sphere_warden.rs
crates/habitat-modules/tests/fixtures/: fiber_snapshot_golden.json  sphere_warden_golden.json
crates/habitat-plugin/: Cargo.toml
crates/habitat-plugin/src/: kernel_pipe.rs  lib.rs  main.rs
crates/orchestrator-kernel-sidecar/: Cargo.toml
crates/orchestrator-kernel-sidecar/src/: lib.rs
crates/orchestrator-perceive/: Cargo.toml
crates/orchestrator-perceive/src/: assemble.rs  catalog.rs  cli.rs  emit.rs  engines.rs  error.rs  exec.rs  fibers.rs  leases.rs  lib.rs  main.rs  manifest.rs  panes.rs
docs/: ARCHITECTURE.md  INDEX.md  OPERATIONS.md  RELEASE.md  SECURITY.md  TASK_STATUS.md  TESTING.md
layouts/: factory-witness.kdl  habitat-compact.kdl  habitat-fleet.kdl  habitat-minimal.kdl
obsidian-zellij-habitat-orchestrator-plugin/: Architecture Schematics.md  Bugs & Known Issues.md  Command Surface.md  Dashboard Modules.md  Diagnostics.md  Executive Summary.md  HOME.md  MOC.md  Orchestrator Kernel Sidecar — Durable Admission Engine.md  Problem Solving.md  Release & Provenance.md  Security & Admission Boundary.md  Task Status & Roadmap.md
obsidian-zellij-habitat-orchestrator-plugin/notes/: Benchmark-Dashboard Integration Wiring.md  Bridge Client & Polling Engine.md  Build Deploy Rollback Pipeline.md  CPU Saturation RCA Summary.md  D11 Witnesses — Source Deep Dive.md  Durable Lessons & Design Decisions.md  Event System & Module Trait.md  KDL Layouts Deep Config.md  P0 P1 Security Audit (2026-04-22).md  Plugin in Habitat Context (Factory Map).md  Render Primitives & Visual Language.md  Response Types & Schema-Drift Protection.md  Score & Fitness Framework.md  Soak Testing & Monitoring.md  Supply Chain & Deny Config.md  Task Status Ledger (v0.1.2).md
scripts/: capture-fixtures.sh  orch-kernel-deep-trace.sh  orch-kernel-deploy.sh  orch-kernel-fitness.sh  orch-kernel-identity.sh  orch-kernel-monitor.sh  orch-kernel-policy-hash.sh  orch-kernel-promote-persistent.sh  orch-kernel-rollback-persistent.sh  orch-kernel-rollback.sh  orch-kernel-score.sh  orch-kernel-soak-selftest.sh  orch-kernel-soak.sh  orch-kernel-v012-live-pipe-proof.sh  orch-kernel-v012-zero-touch-verify.sh  orch-kernel-visual-proof.sh  plugin-v011-direct-health.sh  plugin-v011-one-hour-telemetry.sh  plugin-v012-3h-ultratest-suite.sh
