[workspace]
members = [
    "crates/habitat-core",
    "crates/habitat-modules",
    "crates/habitat-bridge-client",
    "crates/habitat-plugin",
    "crates/orchestrator-kernel-sidecar",
    "crates/orchestrator-perceive",
    "crates/dcg-admit",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.3"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = "s"
lto = true
strip = true
