[package]
name = "habitat-modules"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Built-in modules for the Habitat Zellij plugin: fleet_view, coherence_gauge, event_feed, etc."

[dependencies]
habitat-core = { path = "../habitat-core", version = "0.1.2" }
habitat-bridge-client = { path = "../habitat-bridge-client", version = "0.1.2" }
serde.workspace = true
serde_json.workspace = true
