[package]
name = "orchestrator-kernel-sidecar"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Durable sidecar and CLI for the Zellij Orchestrator Kernel"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"

[[bin]]
name = "orch-kernelctl"
path = "src/bin/orch-kernelctl.rs"

[[bin]]
name = "orch-kerneld"
path = "src/bin/orch-kerneld.rs"
